# pricer_asian_option

./: CMakeLists.txt  README.md  pricer_mac  run.bat  run_project.bat  run_project.sh  setup.bat
App/: PricerApp.cpp  PricerApp.hpp
Data/: MassiveClient.cpp
Graphics/: plot.cpp  plot.hpp
Instruments/: Payoff.cpp  Payoff.hpp
MarketData/: MarketData.hpp
Math/: Greeks.cpp  Greeks.hpp  StochasticModel.cpp  StochasticModel.hpp
gnuplot/gnuplot/demo/: Makefile.am  Makefile.in
gnuplot_mac/aom/3.13.1/: INSTALL_RECEIPT.json  sbom.spdx.json
gnuplot_mac/brotli/1.2.0/: INSTALL_RECEIPT.json  sbom.spdx.json
gnuplot_mac/ca-certificates/2025-12-02/: INSTALL_RECEIPT.json  sbom.spdx.json
gnuplot_mac/cairo/1.18.4/: INSTALL_RECEIPT.json  sbom.spdx.json
gnuplot_mac/dav1d/1.5.2/: INSTALL_RECEIPT.json  sbom.spdx.json
gnuplot_mac/dbus/1.16.2_1/: INSTALL_RECEIPT.json  org.freedesktop.dbus-session.plist  org.freedesktop.dbus-system.plist  sbom.spdx.json
latex/: main.aux  main.out  main.tex  main.toc
main/: main.cpp
mingw64/: version_info.txt
src/App/: CMakeLists.txt
src/CLI/: CMakeLists.txt  adapter.cpp  main.cpp
src/Core/: CMakeLists.txt
src/Core/Instruments/: Payoff.cpp  Payoff.hpp
src/Core/Math/: HestonModel.cpp  HestonModel.hpp  StochasticModel.cpp  StochasticModel.hpp
src/Core/Pricing/: MonteCarloPricer.cpp  MonteCarloPricer.hpp
src/Server/: CMakeLists.txt  main.cpp  server.js
src/Tests/: CMakeLists.txt  test_main.cpp
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
(+5190 files in other folders)
